cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_04844_secgroup-test.yaml
# To use this example make sure you have the following plugins
#
#

AWSTemplateFormatVersion: 2010-09-09
Description: Kablamo Pluging for Network SecurityGroups
Parameters:
  BuildCIDR:
    Default: 172.16.0.0/20
    Description: Internal VPC
    Type: String
  CloudIpRange:
    Default: 172.16.0.0/16
    Description: Kablamo Core
    Type: String
  CoreIpRange:
    Default: 192.168.0.0/16
    Description: Kablamo Core
    Type: String
  DirectConnectIpRange:
    Default: 169.254.247.0/24
    Description: Dicrect Connect Peer IPRange
    Type: String
  GlobalIpRange:
    Default: 0.0.0.0/0
    Description: Global IPRange
    Type: String
  VPCCIDR:
    Default: 172.16.0.0/20
    Description: Internal VPC
    Type: String
  VPCStack:
    Default: Buildstacks-VPC
    Description: VPC Stack
    Type: String
Resources:
  SquidSecurity:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Squid Firewall Rules
      SecurityGroupEgress:
      - CidrIp:
          Ref: CoreIpRange
        FromPort: "-1"
        GroupId: null
        IpProtocol: icmp
        ToPort: "-1"
      - CidrIp:
          Ref: GlobalIpRange
        FromPort: "21"
        GroupId: null
        IpProtocol: tcp
        ToPort: "21"
      - CidrIp:
          Ref: GlobalIpRange
        FromPort: "22"
        GroupId: null
        IpProtocol: tcp
        ToPort: "22"
      - CidrIp:
          Ref: GlobalIpRange
        FromPort: "53"
        GroupId: null
        IpProtocol: tcp
        ToPort: "53"
      - CidrIp:
          Ref: GlobalIpRange
        FromPort: "53"
        GroupId: null
        IpProtocol: udp
        ToPort: "53"
      - CidrIp:
          Ref: GlobalIpRange
        FromPort: "123"
        GroupId: null
        IpProtocol: udp
        ToPort: "123"
      - CidrIp:
          Ref: GlobalIpRange
        FromPort: "80"
        GroupId: null
        IpProtocol: tcp
        ToPort: "80"
      - CidrIp:
          Ref: GlobalIpRange
        FromPort: "443"
        GroupId: null
        IpProtocol: tcp
        ToPort: "443"
      - CidrIp:
          Ref: BuildCIDR
        FromPort: "8140"
        GroupId: null
        IpProtocol: tcp
        ToPort: "8140"
      - CidrIp:
          Ref: BuildCIDR
        FromPort: "61613"
        GroupId: null
        IpProtocol: tcp
        ToPort: "61613"
      SecurityGroupIngress:
      - CidrIp:
          Ref: VPCCIDR
        Description: ICMP Within the VPC
        FromPort: "-1"
        IpProtocol: icmp
        ToPort: "-1"
      - CidrIp:
          Ref: CoreIpRange
        Description: ICMP over DirectConnect
        FromPort: "-1"
        IpProtocol: icmp
        ToPort: "-1"
      - CidrIp:
          Ref: VPCCIDR
        Description: FTP
        FromPort: "21"
        IpProtocol: tcp
        ToPort: "21"
      - CidrIp:
          Ref: VPCCIDR
        Description: SSH
        FromPort: "22"
        IpProtocol: tcp
        ToPort: "22"
      - CidrIp:
          Ref: VPCCIDR
        Description: TCPDNS
        FromPort: "53"
        IpProtocol: tcp
        ToPort: "53"
      - CidrIp:
          Ref: VPCCIDR
        Description: UDPDNS
        FromPort: "53"
        IpProtocol: udp
        ToPort: "53"
      - CidrIp:
          Ref: VPCCIDR
        Description: HTTP
        FromPort: "80"
        IpProtocol: tcp
        ToPort: "80"
      - CidrIp:
          Ref: VPCCIDR
        Description: HTTPS
        FromPort: "443"
        IpProtocol: tcp
        ToPort: "443"
      - CidrIp:
          Ref: VPCCIDR
        Description: Squid
        FromPort: "3128"
        IpProtocol: tcp
        ToPort: "3128"
      - CidrIp:
          Ref: VPCCIDR
        Description: InlineSquid
        FromPort: "8080"
        IpProtocol: tcp
        ToPort: "8080"
      - CidrIp:
          Ref: CoreIpRange
        Description: NTP
        FromPort: "123"
        IpProtocol: udp
        ToPort: "123"
